<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@mipmap/hang0"
    android:id="@+id/parent_Layout"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textWord"
        android:layout_below="@+id/timeTextView"

        android:id="@+id/imageHang"
        android:src="@mipmap/hang0"
       />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="right"
        />

    <!--<Button-->
        <!--android:id="@+id/buttonZ"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:onClick="clickLetterButton"-->
        <!--android:text="@string/_Z"-->
        <!--android:layout_alignParentBottom="true"/>-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickLetterButton"
                style="?android:attr/button"
                android:text="@string/_A" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_B" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickLetterButton"
                style="?android:attr/button"
                android:text="@string/_C" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickLetterButton"
                style="?android:attr/button"
                android:text="@string/_D" />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickLetterButton"
                style="?android:attr/button"
                android:text="@string/_E" />

            <Button
                android:id="@+id/buttonF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickLetterButton"
                style="?android:attr/button"
                android:text="@string/_F" />

            <Button
                android:id="@+id/buttonG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickLetterButton"
                style="?android:attr/button"
                android:text="@string/_G" />

            <Button
                android:id="@+id/buttonH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_H" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_I" />

            <Button
                android:id="@+id/buttonJ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_J" />

            <Button
                android:id="@+id/buttonK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_K" />

            <Button
                android:id="@+id/buttonL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_L" />

            <Button
                android:id="@+id/buttonM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_M" />

            <Button
                android:id="@+id/buttonN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_N" />

            <Button
                android:id="@+id/buttonO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_O" />

            <Button
                android:id="@+id/buttonP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_P" />

            <Button
                android:id="@+id/buttonQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_Q" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_R" />

            <Button
                android:id="@+id/buttonS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_S" />

            <Button
                android:id="@+id/buttonT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_T" />

            <Button
                android:id="@+id/buttonU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_U" />

            <Button
                android:id="@+id/buttonV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_V" />

            <Button
                android:id="@+id/buttonW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_W" />

            <Button
                android:id="@+id/buttonX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/__X" />

            <Button
                android:id="@+id/buttonY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                style="?android:attr/button"
                android:onClick="clickLetterButton"
                android:text="@string/_Y"

                />

            <Button
            android:id="@+id/buttonZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickLetterButton"
            android:text="@string/_Z"
                style="?android:attr/button"
                android:layout_weight="0.5"
           />


        </LinearLayout>


    </LinearLayout>

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="298dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/guideline4"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.0">-->

    <TextView
        android:id="@+id/textWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:gravity="bottom"
        android:textSize="30sp"
        android:layout_above="@id/linearLayout"

        />
    <!--</android.support.constraint.ConstraintLayout>-->

</RelativeLayout>